--- a/app/src/main/res/drawable/bg_animation.xml
+++ b/app/src/main/res/drawable/bg_animation.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <item
+        android:drawable="@drawable/first_layer"
+        android:duration="2000"/>
+
+    <item
+        android:drawable="@drawable/second_layer"
+        android:duration="2000"/>
+
+
+    <item
+        android:drawable="@drawable/third_layer"
+        android:duration="2000"/>
+
+
+</animation-list>
