--- a/app/src/main/res/drawable/third_layer.xml
+++ b/app/src/main/res/drawable/third_layer.xml
@@ -5,7 +5,7 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#240b36"
+                android:startColor="#cde1db27"
                 android:endColor="#c31432"
                 android:type="linear"/>
 
