--- a/app/src/main/res/drawable/second_layer.xml
+++ b/app/src/main/res/drawable/second_layer.xml
@@ -5,8 +5,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#1c8bda"
-                android:endColor="#c31432"
+                android:startColor="#e1da1cda"
+                android:endColor="#e814b1d9"
                 android:type="linear"/>
 
         </shape>
