--- a/app/src/main/res/drawable/third_layer.xml
+++ b/app/src/main/res/drawable/third_layer.xml
@@ -6,7 +6,7 @@
             <gradient
                 android:angle="90"
                 android:startColor="#cde1db27"
-                android:endColor="#c31432"
+                android:endColor="#e814b1d9"
                 android:type="linear"/>
 
         </shape>
