--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#c31432</color>
+    <color name="colorPrimaryDark">#e814b1d9</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
